change secure for protected routes
