# api-gateway/docs/swagger.yaml
@@ -99,6 +99,43 @@ paths:
       summary: Get all users
       tags:
       - users
+    put:
+      consumes:
+      - application/json
+      description: Update user
+      parameters:
+      - description: User with optional fields
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/userEntity.UpdateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/userEntity.PublicUser'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                error:
+                  type: string
+              type: object
+      security:
+      - BearerAuth: []
+      summary: Update user
+      tags:
+      - users
   /users/{id}:
     get:
       consumes:
@@ -131,49 +168,9 @@ paths:
                 error:
                   type: string
               type: object
-      summary: Get user
-      tags:
-      - users
-    put:
-      consumes:
-      - application/json
-      description: Update user
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: User with optional fields
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/userEntity.UpdateUserRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/userEntity.PublicUser'
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                error:
-                  type: string
-              type: object
       security:
       - BearerAuth: []
-      summary: Update user
+      summary: Get user
       tags:
       - users
   /users/auth:
